# IIlllIIllIIIIIllIIllIIIIIllII

./: .gitattributes  .gitignore  .replit  ANALISE-TECNICA-FINAL.md  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  check-windows-deps.bat  diagnostico-arkive.bat  index.html  package-lock.json  package.json  replit.md  tailwind.config.js  testar-exe-com-logs.bat  tsconfig.json  vite.config.js
.github/workflows/: build-windows.yml  build.yml
attached_assets/: ARKIVE - Guardou, Achou!_1762518364456.lnk  LEIA-ME_1762518361862.txt  Pasted--Compiling-constant-time-eq-v0-1-5-Compiling-jiff-v0-2-15-Compiling-zip-v0-6-6-Compiling-1762513304537_1762513304538.txt  Pasted--Compiling-fallible-streaming-iterator-v0-1-9-Compiling-zeroize-v1-8-1-Compiling-fastrand-v2-1762439746754_1762439746758.txt  Pasted--Compiling-image-v0-24-9-Compiling-dirs-v4-0-0-error-E0433-failed-to-resolve-use-of-undeclar-1762513933595_1762513933596.txt  Pasted-Compiling-image-v0-24-9-Compiling-dirs-v4-0-0-error-E0433-failed-to-resolve-use-of-undeclare-1762441677886_1762441677888.txt  Pasted-Compiling-zip-v0-6-6-Compiling-tempfile-v3-22-0-Compiling-rusqlite-v0-32-1-Compiling-env-1762520564853_1762520564855.txt  Pasted-Corre-o-Manual-Adicione-esta-linha-na-lista-de-comandos-do-builder-invoke-handler-tauri-g-1762432299817_1762432299820.txt  Pasted-O-Windows-PowerShell-Copyright-C-Microsoft-Corporation-Todos-os-direitos-reservados-Instale--1762436764364_1762436764367.txt  Pasted-Run-tauri-build-bundles-msi-nsis-Running-beforeBuildCommand-npm-run-build-arkive-des-1762773030349_1762773030350.txt  Pasted-Sua-an-lise-brutal-est-perfeita-voc-pegou-exatamente-onde-o-ARKIVE-brilha-e-onde-ele-patina-Vou-1757601845418_1757601845425.txt  Pasted-Syncing-repository-akamidotodinho-collab-IIlllIIllIIIIIllIIllIIIIIllII-Getting-Git-version-info-T-1762436225315_1762436225320.txt  Pasted-eu-estou-com-o-erro-onde-assim-que-o-github-gera-o-instalador-ele-ja-vem-com-um-instalador-para-el-1757591382345_1757591382352.txt  Uninstall ARKIVE - Guardou, Achou!_1762519758290.lnk  arkive_error_1762519758290.txt
public/: manifest.json  service-worker.js
shared/: schema.ts
src/: SimpleApp.tsx  index.css  index.html  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: backup.rs  database_rusqlite.rs  database_sqlite.rs  date_extractor.rs  date_search_parser.rs  desktop.rs  lib.rs  main.rs  ocr.rs  ocr_simple.rs  simple_storage.rs
src/components/: AuditLogDrawer.tsx  AuditTrail.tsx  BackupManager.tsx  DateRangePicker.tsx  SearchInterface.tsx
src/services/: auditApi.ts  backupApi.ts  documentApi.ts
src/utils/: toast.ts
