[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0", features = ["shell", "dialog", "fs", "notification"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2.0.0" 
tauri-plugin-fs = "2.0.0"
tauri-plugin-notification = "2.0.0"
tokio = { version = "1.28", features = ["full"] }
bcrypt = "0.13"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "4.0"
log = "0.4"
env_logger = "0.11"
rusqlite = { version = "0.28", features = ["bundled", "chrono", "uuid"] }
zip = "0.6"
flate2 = "1.0"
