[package]
name = "arkive"
version = "0.1.0"
description = "ARKIVE - Guardou, Achou!"
authors = ["ARKIVE Team"]
license = "MIT"
repository = "https://github.com/akamidotodinho-collab/IIlllIIllIIIIIllIIllIIIIIllII"
edition = "2021"
rust-version = "1.82"


[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-notification = "2.0.0"
tokio = { version = "1.28", features = ["rt-multi-thread", "macros", "process", "io-util"] }
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "4.0"
sha2 = "0.10"
log = "0.4"
env_logger = "0.11"
tauri-plugin-log = { version = "2.0", features = ["colored"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono", "uuid"] }
zip = "0.6"
flate2 = "1.0"
tempfile = "3.8"
# OCR + Document Processing
# tesseract = "0.14"  # Comentado - pode causar erro no Windows
image = { version = "0.24", features = ["jpeg", "png", "tiff"] }
# pdf-extract = "0.7"  # Comentado - pode causar erro no Windows
lopdf = "0.33"  # Extração de texto de PDFs normais (sem Tesseract)
calamine = "0.26"  # Extração de dados de Excel (.xlsx, .xls, .xlsm)
regex = "1.10"
# Note: Removed candle-core dependencies due to system compatibility issues
# Threading e concorrência
rayon = "1.8"
